# derust

./: Cargo.toml
src/: lib.rs
src/helpers/: macros.rs
src/types/: channel.rs  error.rs  gateway.rs  guild.rs  invite.rs  message.rs  mod.rs  permission.rs  role.rs  user.rs  voice.rs
src/types/gateway/: activity.rs  builder.rs  cache.rs  client.rs  mod.rs  opcodes.rs  payloads.rs
