[package]
name = "derust"
version = "0.1.0"
authors = ["keksbg <me@keksbg.dev>"]
edition = "2018"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "io-std", "blocking", "macros"]}
websocket-lite = "0.3"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
reqwest = { version = "0.10", features = ["json", "gzip"] }
chrono = "0.4"