[package]
name = "derust"
version = "0.1.0"
authors = ["keksbg <me@keksbg.dev>"]
edition = "2018"
license = "MPL-2.0"

[dependencies]
tokio = { version = "0.2", features = ["rt-threaded", "blocking", "time"]}
websocket-lite = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-futures = "0.2"
reqwest = { version = "0.10", features = ["json", "gzip"] }
chrono = "0.4"
miniz_oxide = "0.4"
enumflags2 = { version = "0.6", features = ["serde"] }