[package]
name = "derust"
version = "0.1.0"
authors = ["keksbg <me@keksbg.dev>"]
edition = "2018"
license = "MPL-2.0"

[features]
default = ["cache"]
cache = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.10", features = ["json", "gzip"] }
chrono = "0.4"
miniz_oxide = "0.4"
enumflags2 = { version = "0.6", features = ["serde"] }
tokio = { version = "0.2", features = ["rt-threaded", "time", "sync", "macros", "stream"] }
tokio-tungstenite = "*"
tracing = { version = "0.1", features = ["log"] }
tracing-futures = "0.1"
futures = "*"
futures-util = "*"